# chainsafe-exercise

./: .gitignore  Cargo.toml  README.md
ethereum/: package.json
ethereum/contracts/: Icon.sol
ethereum/migrations/: 2_deploy_contracts.js
src/: lib.rs
src/ipfs/: mod.rs
src/store/: mod.rs
